-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.5.0
-
3
-
9674
Disable OUT_PORTAL on OST, otherwise it will confuse the receiver when MDT and OST are on the same node, which might make ll_ost_outxx handle CONNECT requests from MDTs. Then it would cause panic like
Lustre: 13261:0:(client.c:1896:ptlrpc_expire_one_request()) @@@ Request sent has timed out for slow reply: [sent 1401492648/real 1401492648] req@ffff880044bf9000 x1469570233011472/t0(0) o1000->lustre-MDT0000-osp-MDT0001@0@lo:24/10 lens 8416/8416 e 0 to 1 dl 1401492655 ref 2 fl Rpc:X/0/ffffffff rc 0/-1
Lustre: lustre-MDT0000-osp-MDT0001: Connection to lustre-MDT0000 (at 0@lo) was lost; in progress operations using this service will wait for recovery to complete
Lustre: Skipped 5 previous similar messages
Lustre: lustre-MDT0000: Client lustre-MDT0001-mdtlov_UUID (at 0@lo) reconnecting
LustreError: 4239:0:(mdt_handler.c:3191:mdt_tgt_connect()) ASSERTION( mti != ((void *)0) ) failed:
LustreError: 4239:0:(mdt_handler.c:3191:mdt_tgt_connect()) LBUG
Pid: 4239, comm: ll_ost_out01_00
Call Trace:
[<ffffffffa0603905>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]
[<ffffffffa0603f07>] lbug_with_loc+0x47/0xb0 [libcfs]
[<ffffffffa0ddab95>] mdt_tgt_connect+0x515/0x550 [mdt]
[<ffffffffa0939f5d>] tgt_request_handle+0x57d/0xe30 [ptlrpc]
[<ffffffffa08f6718>] ptlrpc_server_handle_request+0x398/0xc60 [ptlrpc]
[<ffffffffa06045be>] ? cfs_timer_arm+0xe/0x10 [libcfs]
[<ffffffffa061629f>] ? lc_watchdog_touch+0x6f/0x170 [libcfs]
[<ffffffffa08edd09>] ? ptlrpc_wait_event+0xa9/0x290 [ptlrpc]
[<ffffffffa06147e1>] ? libcfs_debug_msg+0x41/0x50 [libcfs]
[<ffffffff810533f3>] ? __wake_up+0x53/0x70
[<ffffffffa08f7aac>] ptlrpc_main+0xacc/0x1750 [ptlrpc]
[<ffffffffa08f6fe0>] ? ptlrpc_main+0x0/0x1750 [ptlrpc]
[<ffffffff81091d66>] kthread+0x96/0xa0
[<ffffffff8100c14a>] child_rip+0xa/0x20
[<ffffffff81091cd0>] ? kthread+0x0/0xa0
[<ffffffff8100c140>] ? child_rip+0x0/0x20
- is duplicated by
-
LU-3728 mdt_handler.c:3176:mdt_tgt_connect()) ASSERTION( mti != ((void *)0) ) failed
-
- Closed
-