LU-3751 ost: disable OUT_PORTAL request handler on OST.

Disable OUT_PORTAL request handler on OST for now, otherwise
it will confuse the connect requests from another MDT, when
MDTs and OSTs are all in the same node.

Signed-off-by: wang di <di.wang@intel.com>
Change-Id: Ifcbfabaa52537e1664086e335b07a6f179b17f2d
Reviewed-on: http://review.whamcloud.com/7323
Reviewed-by: John L. Hammond <john.hammond@intel.com>
Tested-by: Hudson
Reviewed-by: Mike Pershin <mike.pershin@intel.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>